# rust-scraper-v2

./: Cargo.toml  baserules.json  cmdi_payloads.json  ignore.json  payload.json  xss_payloads.json
output/: payloadbox_sqli_payloads.json  sqli_payloads.json  xss_payloads.json
payloadbox/sqli/: error_based.txt  time_based.txt  union_select.txt
src/: main.rs
