[package]
name = "scraper-v2"
version = "0.1.0"
authors = ["jmcbride-r7 <69522964+jmcbride-r7@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
select = "*"
scraper = "*"
prettytable-rs = "*"
regex = "1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde-xml-rs = "0.3.1"
quick-xml = "0.20.0"
sxd-xpath = "0.2.1"
sxd-document = "0.3.2"